--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="personal website of Henric Amokola[Sten]">
+    <meta name="description" content="[portfolio] Henric Amokola,kenyan-based frontend developer.Get to see my personal and collaborated projects">
     <meta name="keywords" content="Henric Amokola, Sten, stendev, stenfrontend, sten website , design, development.">
     <meta name="author" content="Henric Amokola[Sten]">
     <title>STEN</title>
