--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Henric Amokola[Sten]">
     <title>STEN</title>
     <link rel="stylesheet" href="stendev.css">
-    <link rel="icon" href="sten.png" type="image/png">
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body class="body">
     <header class="header">
