--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
     <link rel="stylesheet" href="stendev.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
+<section class="back">
 <body class="body">
-    <header class="header">
-        <h1>STEN</h1>
-    </header>
+   
         <div class="container">
             <div class="box1"> 
                 <h2>quick links</h2>
                 <ul>
-                 <li><a href="#GENERAL INFO">GENERAL INFO</a></li>
-                 <li><a href="#EDUCATION BACKGROUND">education background</a></li>
-                 <li><a href="#PROJECTS">my projects</a></li>
-                 <li><a href="#SOCIAL MEDIA">socials</a></li>
-                 <li><a href="#highlights&vouches">highlights & vouches</a></li>
+                 <li><a href="#GENERAL INFO"><button class="button">GENERAL INFO</button></a></li>
+                 <li><a href="#EDUCATION BACKGROUND"><button class="button">education background</button></a></li>
+                 <li><a href="#PROJECTS"><button class="button">my projects</button></a></li>
+                 <li><a href="#SOCIAL MEDIA"><button class="button">mysocials</button></a></li>
+                 <li><a href="#highlights&vouches"><button class="button">highlights&vouches</button></a></li>
                 </ul>
             </div> 
             <div class="box2">
-                 <a href="#"><img src="henric.jpg" ></a>
+                 <a href="#"><img src="images/henric.jpg" ></a>
             </div>
         </div>
     <div class="content">
         <section id="GENERAL INFO">
             <h2>GENERAL INFO</h2>
-            <p>Henric Amokola, also known as Sten, is a 20-year-old software developer from Kenya. He is passionate about web development and design, with a focus on creating user-friendly interfaces.</p>
+            <p>Henric Amokola, also known as Sten, is a 20-year-old software developer from Kenya.<br>He is passionate about web development and design, with a focus on creating user-friendly interfaces.</p>
         </section>
 
         <section id="EDUCATION BACKGROUND">
@@ -42,7 +41,7 @@
 
         <section id="PROJECTS">
             <h2>MY PROJECTS</h2>
-            <p>Sten has worked on various projects, including web applications and personal websites. His portfolio showcases his skills in front-end development.</p>
+            <p>Sten has worked on various projects, including web applications and personal websites.<br> His portfolio showcases his skills in front-end development.</p>
         </section>
 
         <section id="SOCIAL MEDIA">
@@ -54,5 +53,7 @@
             <h2>HIGHLIGHTS & VOUCHES</h2>
             <p>Sten has received positive feedback from peers and mentors for his dedication and skills in software development.</p>
         </section>
+    </div>
 </body>
+</section>
 </html>
